infra/new yml kong/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: api
          image: digitalronin/foo-microservice:0.1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  labels:
    app: foo-service
spec:
  ports:
    - port: 5000
      name: http
      targetPort: 5000
  selector:
    app: foo
