infra/new yml kong/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: bar-service
                port:
                  number: 5000
